# advent-of-code

./: README.md  pyproject.toml
2024/: README.md  pyproject.toml
2024/day/03/: task-2.py
2024/day/1/: task-2.py
day/01/: task-1.py
day/02/: task-1.py  task-2.py
day/03/: task-1.py
day/04/: task-1 copy.py  task-1.py
